--- a/ficha2.html
+++ b/ficha2.html
@@ -40,7 +40,7 @@
         </li>
     </ul>
 
-    <h2>B - Treino de Pernas</h2>
+    <h2>B - Pernas</h2>
     <ul class="exercise-list">
         <li>
             <span class="exercise-name">Panturrilha em pé</span> - 4 séries x 15-20 repetições
