--- a/ficha2.html
+++ b/ficha2.html
@@ -7,118 +7,210 @@
     <title>Kevin</title>
 </head>
 <body>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
-    <h1>Ficha de Treino 2</h1>
-    <div class="nav-buttons">
-        <a href="index.html" class="nav-button">Ficha 1</a>
+    <header>
+        <h1>Ficha de Treino 2</h1>
+        <div class="nav-buttons">
+            <a href="index.html" class="nav-button">Ficha 1</a>
+        </div>
+    </header>
+    <div id="ficha2">
+        <section>
+            <h2>A - Bíceps/Tríceps</h2>
+            <ul class="exercise-list">
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Bíceps martelo</span>
+                        <span class="exercise-details">4 séries x 12-15 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Tríceps testa com barra EZ</span>
+                        <span class="exercise-details">4 séries x 12-15 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Rosca 21 para bíceps</span>
+                        <span class="exercise-details">4 séries x 12-15 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Tríceps francês com halter</span>
+                        <span class="exercise-details">4 séries x 12-15 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Bíceps concentrado com halter</span>
+                        <span class="exercise-details">4 séries x 12-15 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Tríceps mergulho na máquina</span>
+                        <span class="exercise-details">4 séries x 12-15 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Supino declinado</span>
+                        <span class="exercise-details">4 séries x 12-15 repetições</span>
+                    </div>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>B - Treino de Pernas</h2>
+            <ul class="exercise-list">
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Panturrilha em pé</span>
+                        <span class="exercise-details">4 séries x 15-20 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Panturrilha sentado</span>
+                        <span class="exercise-details">4 séries x 15-20 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Cadeira abdutora</span>
+                        <span class="exercise-details">4 séries x 12-15 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Cadeira extensora</span>
+                        <span class="exercise-details">4 séries x 12-15 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Agachamento livre</span>
+                        <span class="exercise-details">4 séries x 8-10 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Leg press 45</span>
+                        <span class="exercise-details">4 séries x 8-10 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Stiff</span>
+                        <span class="exercise-details">4 séries x 8-10 repetições</span>
+                    </div>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>C - Ombros</h2>
+            <ul class="exercise-list">
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Aquecimento na polia</span>
+                        <span class="exercise-details">2 séries x 15-20 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Desenvolvimento com barra</span>
+                        <span class="exercise-details">4 séries x 8-10 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Elevação frontal com halter</span>
+                        <span class="exercise-details">4 séries x 10-12 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Crucifixo no cabo</span>
+                        <span class="exercise-details">4 séries x 10-12 repetições</span>
+                    </div>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>D - Costa</h2>
+            <ul class="exercise-list">
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Pull-up (Barra Fixa)</span>
+                        <span class="exercise-details">4 séries x até a falha</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Remada curvada na barra livre</span>
+                        <span class="exercise-details">4 séries x 8-10 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Remada máquina, palma mão pra baixo</span>
+                        <span class="exercise-details">4 séries x 8-10 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Puxador triângulo</span>
+                        <span class="exercise-details">4 séries x 8-10 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Remada pegada neutra máquina</span>
+                        <span class="exercise-details">4 séries x 8-10 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Remada baixa triângulo</span>
+                        <span class="exercise-details">4 séries x 8-10 repetições</span>
+                    </div>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>E - Peito</h2>
+            <ul class="exercise-list">
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Supino inclinado com halteres</span>
+                        <span class="exercise-details">4 séries x 8-10 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Supino reto</span>
+                        <span class="exercise-details">4 séries x 8-10 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Flyer</span>
+                        <span class="exercise-details">4 séries x 12-15 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">CrossOver cabo</span>
+                        <span class="exercise-details">4 séries x 12 repetições + flexões até a falha</span>
+                    </div>
+                </li>
+            </ul>
+        </section>
     </div>
-<div id="ficha2">
-    <h2>A - Bíceps/Tríceps</h2>
-    <ul class="exercise-list">
-        <li>
-            <span class="exercise-name">Bíceps martelo</span> - 4 séries x 12-15 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Tríceps testa com barra EZ</span> - 4 séries x 12-15 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Rosca 21 para bíceps</span> - 4 séries x 12-15 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Tríceps francês com halter</span> - 4 séries x 12-15 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Bíceps concentrado com halter</span> - 4 séries x 12-15 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Tríceps mergulho na máquina</span> - 4 séries x 12-15 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Supino declinado</span> - 4 séries x 12-15 repetições
-        </li>
-    </ul>
-
-    <h2>B - Treino de Pernas</h2>
-    <ul class="exercise-list">
-        <li>
-            <span class="exercise-name">Panturrilha em pé</span> - 4 séries x 15-20 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Panturrilha sentado</span> - 4 séries x 15-20 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Cadeira abdutora</span> - 4 séries x 12-15 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Cadeira extensora</span> - 4 séries x 12-15 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Agachamento livre</span> - 4 séries x 8-10 repetições
-        </li>
-        <li>
-            <span class "exercise-name">Leg press 45</span> - 4 séries x 8-10 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Stiff</span> - 4 séries x 8-10 repetições
-        </li>
-    </ul>
-
-    <h2>C - Ombros</h2>
-    <ul class="exercise-list">
-        <li>
-            <span class="exercise-name">Aquecimento na polia</span> - 2 séries x 15-20 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Desenvolvimento com barra</span> - 4 séries x 8-10 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Elevação frontal com halter</span> - 4 séries x 10-12 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Crucifixo no cabo</span> - 4 séries x 10-12 repetições
-        </li>
-    </ul>
-
-    <h2>D - Costa</h2>
-<ul class="exercise-list">
-    <li>
-        <span class="exercise-name">Pull-up (Barra Fixa)</span> - 4 séries x até a falha
-    </li>
-    <li>
-        <span class="exercise-name">Remada curvada na barra livre</span> - 4 séries x 8-10 repetições
-    </li>
-    <li>
-        <span class="exercise-name">Remada máquina, palma mão pra baixo</span> - 4 séries x 8-10 repetições
-    </li>
-    <li>
-        <span class="exercise-name">Puxador triângulo</span> - 4 séries x 8-10 repetições
-    </li>
-    <li>
-        <span class="exercise-name">Remada pegada neutra máquina</span> - 4 séries x 8-10 repetições
-    </li>
-    <li>
-        <span class="exercise-name">Remada baixa triângulo</span> - 4 séries x 8-10 repetições
-    </li>
-</ul>
-
-<h2>E - Peito</h2>
-<ul class="exercise-list">
-    <li>
-        <span class="exercise-name">Supino inclinado com halteres</span> - 4 séries x 8-10 repetições
-    </li>
-    <li>
-        <span class="exercise-name">Supino reto</span> - 4 séries x 8-10 repetições
-    </li>
-    <li>
-        <span class="exercise-name">Flyer</span> - 4 séries x 12-15 repetições
-    </li>
-    <li>
-        <span class="exercise-name">CrossOver cabo</span> - 4 séries x 12 repetições + flexões até a falha
-    </li>
-</ul>
-</div>
-
 </body>
 </html>
