--- a/index.html
+++ b/index.html
@@ -7,134 +7,222 @@
     <title>Kevin</title>
 </head>
 <body>
-</head>
-<body>
-    <h1>Ficha de Treino 1</h1>
-    <div class="nav-buttons">
-        <a href="ficha2.html" class="nav-button">Ficha 2</a>
+    <header>
+        <h1>Ficha de Treino 1</h1>
+        <div class="nav-buttons">
+            <a href="ficha2.html" class="nav-button">Ficha 2</a>
+        </div>
+    </header>
+    <div id="ficha1">
+        <section>
+            <h2>A - Bíceps/Tríceps</h2>
+            <ul class="exercise-list">
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Bíceps barra reta polia baixa</span>
+                        <span class="exercise-details">4 séries x 12-15 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Bíceps uni. Polia baixa</span>
+                        <span class="exercise-details">4 séries x 12-15 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Bíceps B corda</span>
+                        <span class="exercise-details">4 séries x 12-15 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class "exercise">
+                        <span class="exercise-name">Tríceps corda</span>
+                        <span class="exercise-details">4 séries x 12-15 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Tríceps corda polia alta</span>
+                        <span class="exercise-details">4 séries x 12-15 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Bíceps banco Scott uni</span>
+                        <span class="exercise-details">4 séries x 12-15 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Tríceps no banco</span>
+                        <span class="exercise-details">4 séries x 12-15 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Supino fechado</span>
+                        <span class="exercise-details">4 séries x 12-15 repetições</span>
+                    </div>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>B - Treino de Pernas</h2>
+            <ul class="exercise-list">
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Panturrilha em pé</span>
+                        <span class="exercise-details">4 séries x 15-20 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Panturrilha sentado</span>
+                        <span class="exercise-details">4 séries x 15-20 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Cadeira abdutora</span>
+                        <span class="exercise-details">4 séries x 12-15 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Cadeira extensora</span>
+                        <span class="exercise-details">4 séries x 12-15 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Agachamento</span>
+                        <span class="exercise-details">4 séries x 8-10 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Leg press 45</span>
+                        <span class="exercise-details">4 séries x 8-10 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Stiff</span>
+                        <span class="exercise-details">4 séries x 8-10 repetições</span>
+                    </div>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>C - Ombros</h2>
+            <ul class="exercise-list">
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Aquecimento na polia</span>
+                        <span class="exercise-details">2 séries x 15-20 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Desenvolvimento com halter</span>
+                        <span class="exercise-details">4 séries x 8-10 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Puxado baixo com barra</span>
+                        <span class="exercise-details">4 séries x 8-10 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Elevação lateral com halter sentado</span>
+                        <span class="exercise-details">4 séries x 10-12 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Crucifixo no cabo</span>
+                        <span class="exercise-details">4 séries x 10-12 repetições</span>
+                    </div>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>D - Costa</h2>
+            <ul class="exercise-list">
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Pull-up (Barra Fixa)</span>
+                        <span class="exercise-details">4 séries x até a falha</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Remada curvada na barra livre</span>
+                        <span class="exercise-details">4 séries x 8-10 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Remada máquina, palma mão pra baixo</span>
+                        <span class="exercise-details">4 séries x 8-10 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Puxador triângulo</span>
+                        <span class="exercise-details">4 séries x 8-10 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Remada pegada neutra máquina</span>
+                        <span class="exercise-details">4 séries x 8-10 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Remada baixa triângulo</span>
+                        <span class="exercise-details">4 séries x 8-10 repetições</span>
+                    </div>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>E - Peito</h2>
+            <ul class="exercise-list">
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Supino inclinado com halteres</span>
+                        <span class="exercise-details">4 séries x 8-10 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Supino reto</span>
+                        <span class="exercise-details">4 séries x 8-10 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">Flyer</span>
+                        <span class="exercise-details">4 séries x 12-15 repetições</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="exercise">
+                        <span class="exercise-name">CrossOver cabo</span>
+                        <span class="exercise-details">4 séries x 12 repetições + flexões até a falha</span>
+                    </div>
+                </li>
+            </ul>
+        </section>
     </div>
-<div id="ficha1">
-    <h2>A - Bíceps/Tríceps</h2>
-    <ul class="exercise-list">
-        <li>
-            <span class="exercise-name">Bíceps barra reta polia baixa</span> - 4 séries x 12-15 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Bíceps uni. Polia baixa</span> - 4 séries x 12-15 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Bíceps B corda</span> - 4 séries x 12-15 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Tríceps corda</span> - 4 séries x 12-15 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Tríceps corda polia alta</span> - 4 séries x 12-15 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Bíceps banco Scott uni</span> - 4 séries x 12-15 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Tríceps no banco</span> - 4 séries x 12-15 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Supino fechado</span> - 4 séries x 12-15 repetições
-        </li>
-    </ul>
-
-    <h2>B - Treino de Pernas</h2>
-    <ul class="exercise-list">
-        <li>
-            <span class="exercise-name">Panturrilha em pé</span> - 4 séries x 15-20 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Panturrilha sentado</span> - 4 séries x 15-20 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Cadeira abdutora</span> - 4 séries x 12-15 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Cadeira extensora</span> - 4 séries x 12-15 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Agachamento</span> - 4 séries x 8-10 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Leg press 45</span> - 4 séries x 8-10 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Stiff</span> - 4 séries x 8-10 repetições
-        </li>
-    </ul>
-
-    <h2>C - Ombros</h2>
-    <ul class="exercise-list">
-        <li>
-            <span class="exercise-name">Aquecimento na polia</span> - 2 séries x 15-20 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Desenvolvimento com halter</span> - 4 séries x 8-10 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Puxado baixo com barra</span> - 4 séries x 8-10 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Elevação lateral com halter sentado</span> - 4 séries x 10-12 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Crucifixo inverso no cabo</span> - 4 séries x 10-12 repetições
-        </li>
-    </ul>
-
-    <h2>D - Costa</h2>
-    <ul class="exercise-list">
-        <li>
-            <span class="exercise-name">Remada curvada na barra livre</span> - 4 séries x 8-10 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Remada máquina, palma mão pra baixo</span> - 4 séries x 8-10 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Remada serrote</span> - 4 séries x 8-10 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Puxador triângulo</span> - 4 séries x 8-10 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Remada pegada neutra máquina</span> - 4 séries x 8-10 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Remada baixa triângulo</span> - 4 séries x 8-10 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Remada cavalinho (3 drop sets)</span> - 3 séries de gotas
-        </li>
-        <li>
-            <span class="exercise-name">Levantamento terra (3 séries)</span> - Use pesos mais pesados, 5-6 repetições por série
-        </li>
-    </ul>
-
-    <h2>E - Peito</h2>
-    <ul class="exercise-list">
-        <li>
-            <span class="exercise-name">Supino inclinado com halteres ou máquina (aquecimento 15-20 reps)</span> - 4 séries x 15/12/10/8 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Supino reto</span> - 3 séries x 12/10/8 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Flyer</span> - 4 séries x 15-20 repetições
-        </li>
-        <li>
-            <span class="exercise-name">CrossOver cabo</span> - 4 séries x 12 repetições + flexões até a falha
-        </li>
-        <li>
-            <span class="exercise-name">Supino inclinado Smith</span> - 4 séries x 8-10 repetições
-        </li>
-        <li>
-            <span class="exercise-name">Crucifixo banco inclinado</span> - 4 séries x 10-12 repetições
-        </li>
-    </ul>
-</div>
 </body>
 </html>
